[package]
name = "pdfanno2org"
version = "0.1.0"
edition = "2021"
authors = ["Igor R. Dejanović <igor.dejanovic@gmail.com>"]
description = "Extracts PDF annotations into Org Mode file"
license = "Apache-2.0/MIT"
repository = "https://github.com/igordejanovic/pdfanno2org/"
readme = "README.md"
keywords = ["pdf", "annotations", "orgmode", "convertor"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
lopdf = "0.32"
ignore = "0.4"
anyhow = "1"
serde_json = "1"
chrono = "0.4"
textwrap = "0.16"
pathdiff = "0.2"
